--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- A-Frame must be loaded in head before Angular to avoid document.currentScript issues -->
+  <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
